[package]
name = "random-output"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.12", features = ["derive"] }
crossterm = "0.24.0"
rand = "0.8.5"
random-string = "1.0.0"
