[package]
name = "random-output"
version = "0.3.2"
edition = "2024"
authors = ["yuma140902"]
description = "Output random lines to stdout and stderr"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yuma140902/random-output"
keywords = ["cli"]
resolver = "3"
rust-version = "1.97.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.10.2"
random-string = "1.0.0"
